# Mantic-Mind

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json  wsl_build.sh  wsl_check_node.sh  wsl_check_up.sh  wsl_diag.sh  wsl_diag2.sh  wsl_diag3.sh  wsl_drive_steps.sh  wsl_envrepro.sh  wsl_fix_starlette.sh  wsl_launch_node.sh  wsl_localtools.sh  wsl_nodecheck.sh  wsl_prep_run.sh  wsl_proclist.sh  wsl_repro_discovery.sh  wsl_restart_node.sh  wsl_setup.sh  wsl_setup_build.sh  wsl_single_load.sh  wsl_vllm_manual.sh  wsl_vllm_manual2.sh  wsl_vllm_test2.sh  wsl_watch_load.sh
.github/workflows/: cmake-multi-platform.yml
docs/: aio.md
include/aio/: aio_config.hpp  aio_host.hpp  local_node_operations.hpp
include/common/: agent.hpp  agent_db.hpp  cancellable_http.hpp  cli_repl.hpp  config_file.hpp  conversation_manager.hpp  gguf_metadata.hpp  http_client.hpp  http_server.hpp  inference_response_parser.hpp  inference_sizing.hpp  llama_cpp_client.hpp  logger.hpp  memory_manager.hpp  model_catalog.hpp  models.hpp  node_discovery.hpp  node_inference.hpp  pairing.hpp  runtime_args.hpp  runtime_client.hpp  sse_emitter.hpp  sse_infer_ctx.hpp  tool_executor.hpp  trace_provenance.hpp  tui_widgets.hpp  util.hpp
include/control/: agent_config_validator.hpp  agent_manager.hpp  agent_queue.hpp  agent_scheduler.hpp  audio_player.hpp  control_api_server.hpp  control_config.hpp  control_host.hpp  control_ui.hpp  engine_group_planner.hpp  model_distributor.hpp  model_router.hpp  node_operations.hpp  node_registry.hpp  performance_tracker.hpp  tts_service_client.hpp
include/node/: hf_cache.hpp  llama_cpp_provisioner.hpp  llama_runtime.hpp  llama_runtime_manager.hpp  llama_server_process.hpp  model_puller.hpp  model_storage.hpp  model_store.hpp  node_api_server.hpp  node_config.hpp  node_host.hpp  node_service.hpp  node_state.hpp  node_ui.hpp  process_exec.hpp  ray_orchestration.hpp  runtime_process.hpp  singleton_lock.hpp  slot_manager.hpp  vllm_provisioner.hpp  vllm_runtime.hpp
scripts/: build.ps1  build.sh  package-release.ps1
src/aio/: CMakeLists.txt  aio_config.cpp  aio_host.cpp  local_node_operations.cpp  main.cpp
src/common/: CMakeLists.txt  agent.cpp  agent_db.cpp  cancellable_http.cpp  cli_repl.cpp  config_file.cpp  conversation_manager.cpp  gguf_metadata.cpp  http_client.cpp  http_server.cpp  inference_response_parser.cpp  inference_sizing.cpp  llama_cpp_client.cpp  logger.cpp  memory_manager.cpp  model_catalog.cpp  node_discovery.cpp  pairing.cpp  runtime_client.cpp  sse_emitter.cpp  tool_executor.cpp  trace_provenance.cpp  util.cpp
src/control/: CMakeLists.txt  agent_config_validator.cpp  agent_manager.cpp  agent_queue.cpp  agent_scheduler.cpp  audio_player.cpp  control_api_server.cpp  control_host.cpp  control_ui.cpp  engine_group_planner.cpp  main.cpp  model_distributor.cpp  model_router.cpp  node_operations.cpp  node_registry.cpp  performance_tracker.cpp  tts_service_client.cpp
src/node/: CMakeLists.txt  hf_cache.cpp  llama_cpp_provisioner.cpp  llama_runtime.cpp  llama_runtime_manager.cpp  llama_server_process.cpp  main.cpp  model_puller.cpp  model_storage.cpp  model_store.cpp  node_api_server.cpp  node_host.cpp  node_service.cpp  node_state.cpp  node_ui.cpp  process_exec.cpp  ray_orchestration.cpp  runtime_process.cpp  singleton_lock.cpp  slot_manager.cpp  vllm_provisioner.cpp  vllm_runtime.cpp
tests/: CMakeLists.txt  aio_config_tests.cpp  aio_host_integration_tests.cpp  aio_node_operations_tests.cpp  install_layout_test.cmake  node_host_tests.cpp  reliability_tests.cpp  test_qwen_tts_service.py  vision_smoke.py
tools/: llama-throughput-sweep.py  mantic-mind-aio.toml  mantic-mind-control.toml  mantic-mind.toml  qwen_tts_service.py  update-llama-cpp.ps1  update-llama-cpp.sh
tools/schema/: agent_schema.sql
wsl_run/: mantic-mind-control.toml  mantic-mind.toml
